# Certify

./: .gitignore  README.md  main.py  pyproject.toml
cert/template/basic/: main.css  template.html
certify/constants/: cert.py  jwt.py  scope.py
certify/core/: config.py  events.py  logging.py
certify/core/error/: http_error.py  validation_error.py
certify/core/middleware/: jwt.py
certify/models/: cert.py  response.py  token.py  verify.py
certify/routes/: __init__.py
certify/routes/api/: __init__.py
certify/routes/api/v1/: __init__.py  cert.py  verify.py
certify/utils/: auth.py  cert.py  img.py  pdf.py  storage.py
